@@ -9,7 +9,7 @@
   <div id="hud">
     <h1>Tan - IOT Assistant</h1>
     <div id="status">Connecting...</div>
-    <div id="chat"></div>
+    <pre id="chat"></pre>
     <input id="input" type="text" placeholder="Type command...">
     <button onclick="sendMessage()">Send</button>
   </div>
